--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -5,7 +5,7 @@
         {{ $theme := .Page.Params.theme }}
         {{ $type := .Page.Type }}
         {{ $home := .IsHome }}
-        <img src="/img/makhno_logo.svg" alt="Makhno logo">
+        <img src="/img/svg/makhno_logo.svg" alt="Makhno logo">
       </a>
       <button class="navbar-toggler" type="button" aria-label="Toggle navigation" onclick="openNav()">
         {{ partial "fontawesome.html" "light/bars" }}
